<resources>
    <string name="app_name">园区监控</string>

    <!-- 登录页 -->
    <string name="login_title">大规模音视频管控平台</string>
    <string name="login_subtitle">手机客户端</string>
    <string name="login_phone_hint">请输入手机号</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_remember_password">记住密码</string>
    <string name="login_button">登 录</string>
    <string name="login_clear">清除</string>
    <string name="login_service_phone">客服电话：400-614-6556</string>

    <!-- 首页 -->
    <string name="home_search_hint">搜索设备、事件....</string>
    <string name="tab_all">全部</string>
    <string name="tab_admin_building">行政办公楼</string>
    <string name="tab_teaching_building">公共教学楼</string>
    <string name="tab_main_square">1号主广场</string>

    <!-- 监控画面 -->
    <string name="camera_tab_realtime">实时</string>
    <string name="camera_tab_recording">录像</string>
    <string name="camera_tab_message">消息</string>
    <string name="camera_tab_scene">场景</string>
    <string name="camera_screenshot">截图</string>
    <string name="camera_record">录制</string>
    <string name="camera_intercom">对讲</string>
    <string name="camera_resolution">清晰度</string>
    <string name="camera_preset">预置点</string>
    <string name="camera_preview_placeholder">视频预览</string>
    <string name="zoom_level_format">%dx</string>
    <string name="ptz_up">向上</string>
    <string name="ptz_down">向下</string>
    <string name="ptz_left">向左</string>
    <string name="ptz_right">向右</string>
</resources>
